--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="charcoal">#36454F</color>
     <color name="red">#FF0000</color>
     <color name="green">#008000</color>
+    <color name="lightMain">#E2EEF8</color>
 
     <!-- App color resources -->
     <color name="main">#60b7fe</color>
