--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="20dp"
-                android:background="@color/charcoal" />
+                android:background="@color/charcoal"
+                android:layout_marginHorizontal="5dp"/>
 
             <TextView
                 android:id="@+id/profileBtn"
@@ -121,13 +122,13 @@
                 android:text="Profile"
                 android:textColor="@color/charcoal"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginBottom="10dp"
-                android:background="@color/charcoal" />
+                android:background="@color/charcoal"
+                android:layout_marginHorizontal="5dp"/>
 
             <TextView
                 android:id="@+id/logOutBtn"
@@ -140,21 +141,20 @@
                 android:gravity="center"
                 android:paddingHorizontal="20dp"
                 android:text="Log Out"
-                android:textColor="@color/charcoal"
+                android:textColor="@color/white"
                 android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/charcoal" />
+                android:textStyle="bold"
+                android:drawableTint="@color/white"
+                android:background="@color/red"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="5dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="50dp"
                 android:gravity="bottom|center_horizontal"
-                android:text="AppVersion 1.0.0.1"
+                android:text="AppVersion 1.0.0.2"
                 android:textColor="@color/charcoal"
                 android:textSize="15sp" />
         </LinearLayout>
