all issue solved only forgot password left

--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -107,6 +107,8 @@
                 android:text="Description: "
                 android:textColor="@color/charcoal"
                 android:textSize="15sp"
+                android:layout_gravity="start"
+                android:gravity="start"
                 android:textStyle="bold" />
 
             <TextView
