--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLength="30"
+            android:singleLine="true"
             android:text="Title"
             android:textColor="@color/charcoal"
             android:textSize="18sp"
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:maxLength="100"
+                android:singleLine="true"
                 android:text="UserName"
                 android:textColor="@color/black"
                 android:textSize="15sp"
@@ -75,7 +75,7 @@
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:inputType="textPassword"
-                android:maxLength="20"
+                android:singleLine="true"
                 android:text="Password"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -87,10 +87,10 @@
                 android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="2dp"
-                android:src="@drawable/eye_close"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:focusable="true"/>
+                android:focusable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:src="@drawable/eye_close" />
         </LinearLayout>
 
         <LinearLayout
@@ -103,12 +103,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:gravity="start"
                 android:maxLength="100"
                 android:text="Description: "
                 android:textColor="@color/charcoal"
                 android:textSize="15sp"
-                android:layout_gravity="start"
-                android:gravity="start"
                 android:textStyle="bold" />
 
             <TextView
@@ -117,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:inputType="textMultiLine"
-                android:maxLength="50"
+                android:maxLines="2"
                 android:text="Description"
                 android:textColor="@color/black"
                 android:textSize="15sp"
@@ -127,9 +127,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:gravity="end"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/editBtn"
