--- a/app/src/main/res/layout/activity_forgot_pass.xml
+++ b/app/src/main/res/layout/activity_forgot_pass.xml
@@ -23,7 +23,7 @@
             android:layout_marginHorizontal="20dp"
             android:text="@string/enter_mobile_number_for_password_change"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="50dp"
+                android:layout_width="40dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:src="@drawable/flag" />
@@ -47,7 +47,7 @@
                 android:layout_marginEnd="10dp"
                 android:text="+91"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/phoneNumber"
@@ -60,7 +60,36 @@
                 android:maxLength="10"
                 android:paddingHorizontal="5dp"
                 android:textColor="@color/charcoal"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/square_5_bg"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:src="@drawable/gmail"
+                android:layout_marginEnd="10dp"/>
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="Enter email address"
+                android:inputType="textEmailAddress"
+                android:paddingHorizontal="5dp"
+                android:textColor="@color/charcoal"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <Button
@@ -71,6 +100,7 @@
             android:layout_marginTop="50dp"
             android:gravity="center"
             android:text="Submit"
+            android:textSize="16sp"
             android:textColor="@color/white"
             android:textStyle="bold" />
     </LinearLayout>
