--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -104,8 +104,10 @@
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/square_5_bg"
+                android:clickable="false"
+                android:editable="false"
+                android:focusable="false"
                 android:hint="Enter mail id"
-                android:inputType="textEmailAddress"
                 android:paddingHorizontal="10dp"
                 android:singleLine="true"
                 android:textColor="@color/black"
