--- a/app/src/main/res/layout/activity_forgot_pass.xml
+++ b/app/src/main/res/layout/activity_forgot_pass.xml
@@ -26,12 +26,14 @@
             android:textSize="16sp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="80dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/square_5_bg"
-            android:gravity="center"
+            android:gravity="start"
+            android:layout_gravity="start"
             android:orientation="horizontal">
 
             <ImageView
@@ -64,9 +66,10 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/square_5_bg"
             android:gravity="center"
@@ -81,7 +84,7 @@
 
             <EditText
                 android:id="@+id/email"
-                android:layout_width="250dp"
+                android:layout_width="240dp"
                 android:layout_height="45dp"
                 android:background="@null"
                 android:gravity="center_vertical"
@@ -127,7 +130,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             android:gravity="start"
             android:orientation="horizontal"
@@ -173,7 +176,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="5dp"
             android:gravity="start"
             android:orientation="horizontal"
